--- a/main/templates/main/expenditure.html
+++ b/main/templates/main/expenditure.html
@@ -1,5 +1,7 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <div class="container-fluid">
@@ -7,12 +9,13 @@
   	<br>
   	<form method="POST">
    		{% csrf_token %}
-    	{{ form }}
+    	{{ form|crispy }}
     	<input type="submit" value="Submit">
  	</form>
-
  	<br>
-  	<h4>Income Table</h4>
+ 	<h4>Total Expenditure: {{total_expenditure}}</h4>
+ 	<br>
+  	<h4>Expenditure Table</h4>
 	<table class="table table-hover">
 	  <thead>
 	    <tr>
@@ -29,7 +32,7 @@
 	    <tr>
 	      <th scope="row">{{ forloop.counter }}</th>
 	      <td>{{expenditure.date}}</td>
-	      <td><a href="">{{expenditure.purpose}}</td>
+	      <td><a href="{% url 'main:expenditure-update' expenditure.id %}">{{expenditure.purpose}}</td>
 	      <td>{{expenditure.expenditure_type}}</td>
 	      <td>{{expenditure.payment_mode}}</td>
 	      <td>{{expenditure.amount}}</td>
