--- a/main/templates/main/income.html
+++ b/main/templates/main/income.html
@@ -1,5 +1,6 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
 {% block content %}
 
 <div class="container-fluid">
@@ -7,10 +8,11 @@
   	<br>
   	<form method="POST">
    		{% csrf_token %}
-    	{{ form }}
+    	{{ form|crispy }}
     	<input type="submit" value="Submit">
  	</form>
-
+ 	<br>
+ 	<h4> Total Income: {{total_income}} </h4>
  	<br>
   	<h4>Income Table</h4>
 	<table class="table table-hover">
