--- a/main/templates/main/item_line.html
+++ b/main/templates/main/item_line.html
@@ -1,9 +1,67 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <div class="container-fluid">
-  <h3 class="mt-4">ITEM LINE</h3>
+  	<h3 class="mt-4">ITEM LINE <span>
+  		<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">
+			<i class="fas fa-plus-circle"></i>
+			ADD
+		</button>
+  	</span></h3>
+  		
+	
+
+		<table class="table table-hover" style="margin-top: 10px">
+		  <thead>
+		    <tr>
+		      <th scope="col">No.</th>
+		      <th scope="col">Name</th>
+		      <th scope="col">Purpose</th>
+		      <th scope="col">Expected Cost</th>
+		      <th scope="col">Actual Cost</th>
+		      <th scope="col">Item Type</th>
+		      <th scope="col">Urgency</th>
+		      <th scope="col">Date Added</th>
+		      <th scope="col">Status</th>
+		    </tr>
+		  </thead>
+		  <tbody>
+		  	{% for item in items %}
+		    <tr>
+		      <th scope="row">{{ forloop.counter }}</th>
+		      <td>{{item.name}}</td>
+		      <td>{{item.purpose}}</td>
+		      <td>{{item.expected_cost}}</td>
+		      <td>{{item.actual_cost}}</td>
+		      <td>{{item.item_type}}</td>
+		      <td>{{item.urgency}}</td>
+		      <td>{{item.date_added}}</td>
+		      <td>{{item.status}}</td>
+
+		    </tr>
+		    {% endfor %}
+		  </tbody>
+		</table>
 </div>
+
+
+<!-- MODAL FORM -->
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+  	
+    <div class="modal-content" style="padding: 20px">
+	     <form method="POST">
+	   		{% csrf_token %}
+	    	{{ form|crispy }}
+	    	<input class="btn btn-primary" type="submit" value="Submit">
+		</form>
+    </div>
+  </div>
+</div>
+<!--  -->
+
 
 {% endblock %}
