--- a/main/templates/main/item_line.html
+++ b/main/templates/main/item_line.html
@@ -3,18 +3,22 @@
 {% load crispy_forms_tags %}
 
 {% block content %}
-
+<style type="text/css">
+	.icon-btn {
+	    padding: 1px 15px 3px 2px;
+	    border-radius:50px;
+	}
+</style>
 <div class="container-fluid">
-  	<h3 class="mt-4">ITEM LINE <span>
-  		<button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">
-			<i class="fas fa-plus-circle"></i>
-			ADD
-		</button>
-  	</span></h3>
-  		
-	
-
-		<table class="table table-hover" style="margin-top: 10px">
+  	<h3 class="mt-4">ITEM LINE 
+  		<span>
+	  		<button type="button" class="btn icon-btn btn-primary btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">
+				<i class="fas fa-plus-circle" style="padding: 5px"></i>
+				ADD
+			</button>
+  		</span>
+  	</h3>
+	<table class="table table-hover" style="margin-top: 10px">
 		  <thead>
 		    <tr>
 		      <th scope="col">No.</th>
@@ -32,7 +36,7 @@
 		  	{% for item in items %}
 		    <tr>
 		      <th scope="row">{{ forloop.counter }}</th>
-		      <td>{{item.name}}</td>
+		      <td><a href="{% url 'main:item-line-update' item.id %}">{{item.name}}</a></td>
 		      <td>{{item.purpose}}</td>
 		      <td>{{item.expected_cost}}</td>
 		      <td>{{item.actual_cost}}</td>
@@ -40,13 +44,11 @@
 		      <td>{{item.urgency}}</td>
 		      <td>{{item.date_added}}</td>
 		      <td>{{item.status}}</td>
-
 		    </tr>
 		    {% endfor %}
 		  </tbody>
-		</table>
+	</table>
 </div>
-
 
 <!-- MODAL FORM -->
 <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
@@ -61,7 +63,4 @@
     </div>
   </div>
 </div>
-<!--  -->
-
-
 {% endblock %}
