--- a/main/templates/main/money_borrowed.html
+++ b/main/templates/main/money_borrowed.html
@@ -2,22 +2,25 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block content %}
-
+<style type="text/css">
+	.icon-btn {
+	    padding: 1px 15px 3px 2px;
+	    border-radius:50px;
+	}
+</style>
 <div class="container-fluid">
-  <h3 class="mt-4">MONEY BORROWED</h3><h5>(OR TO PAY)</h5>
+  <h3 class="mt-4">MONEY BORROWED
+  		<span>
+	  		<button type="button" class="btn icon-btn btn-primary btn-sm" data-toggle="modal" data-target=".bd-example-modal-lg">
+				<i class="fas fa-plus-circle" style="padding: 5px"></i>
+				ADD
+			</button>
+  		</span>
+  		<span style="font-size: 20px;float: right;padding-right: 20px">Total Money Borrowed: {{total_money_borrowed}}</span>
+  	</h3>
   <br>
-  <h5 style="">Total Money Borrowed: {{total_money_borrowed}}</h5>
-  <br>
-  <div class="row">
-  	<div class="col-md-4">
-  		<form method="POST">
-   			{% csrf_token %}
-    		{{ form|crispy }}
-    		<input type="submit" class="btn btn-primary" value="Submit">
- 		</form>	
-  	</div>
-  	<div class="col-md-8">
-  		<table class="table table-hover">
+
+  	<table class="table table-hover">
 	  <thead>
 	    <tr>
 	      <th scope="col">No.</th>
@@ -47,9 +50,19 @@
 	    {% endfor %}
 	  </tbody>
 	</table>
-  	</div>
+
+</div>
+<!-- MODAL FORM -->
+<div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-lg">
   	
+    <div class="modal-content" style="padding: 20px">
+	     <form method="POST">
+	   		{% csrf_token %}
+	    	{{ form|crispy }}
+	    	<input class="btn btn-primary" type="submit" value="Submit">
+		</form>
+    </div>
   </div>
 </div>
-
 {% endblock %}
