--- a/main/templates/main/update_income.html
+++ b/main/templates/main/update_income.html
@@ -1,14 +1,20 @@
 {% extends 'main/base.html' %}
 {% load static %}
+{% load crispy_forms_tags %}
+
 {% block content %}
 
 <div class="container-fluid">
   	<h3 class="mt-4">INCOME UPDATE</h3>
+  	{% if message %}
+  		<p>{{message}}</p>
+  	{% else %}
   	<form method="POST">
    		{% csrf_token %}
-    	{{ form }}
+    	{{ form|crispy }}
     	<input type="submit" value="Submit">
  	</form>
+ 	{% endif %}
 </div>
 
 {% endblock %}
